# bayeslearner-skills

./: .gitignore  AGENTS.md  README.md
skills/wise-rpa-bdd/: .coverage  .gitignore  SKILL.md  pyproject.toml  spec-10-yelp-stealth.md
skills/wise-rpa-bdd/docs/: escape-mdp-spec.md  robotframework-guide.html
skills/wise-rpa-bdd/examples/: overview.md
skills/wise-rpa-bdd/examples/quotes/: evidence.md  explore.md  orient.md  refine.md  ship.md  suite.robot  task.md
skills/wise-rpa-bdd/examples/revspin/: evidence.md  suite.robot  task.md
skills/wise-rpa-bdd/examples/splunk-itsi/: evidence.md  suite.robot  task.md
skills/wise-rpa-bdd/references/: ai-adapter.md  architecture.md  comparisons.md  field-guide.md  flow-shape.md  format.md  harness.md  keyword-contract.md  keyword-reference.md  workflow.md
skills/wise-rpa-bdd/scripts/: WiseRpaBDD.py  generate_from_wise_yaml.py  validate_suite.py
skills/wise-rpa-bdd/templates/: ai-enrich.robot  ai-extract.robot  base.robot  element-click.robot  listing-detail.robot  matrix.robot  multi-resource-docs.robot  sort-verify.robot
skills/wise-rpa-bdd/tests/: AgentRunner.py  e2e_test_agent_generates_valid_suites.robot  test_emit_synthesis.py  test_topo_sort.py
skills/wise-rpa-bdd/tests/fixtures/: yelp-cookies.json
skills/wise-rpa-bdd/tests/golden/: airbnb-await-test.robot  airbnb-miami-stealth-test.robot  airbnb-miami-stealth.prompt.md  airbnb-splitrule-test.robot  ajax-tablets-test.robot  books-catalogue-test.robot  cookiebot-interrupt-test.robot  countries-list-test.robot  e-commerce-phones-test.robot  quotes-test.robot  (+21 more)
(+182 files in other folders)
