[project]
name = "wise-rpa-bdd"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.56",
    "patchright>=1.51",
    "robotframework>=7.4.2",
    "robotframework-browser>=19.14.2",
    "jmespath>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
